feat: stories mock data.

--- a/src/app/[slug]/_components/timeline.module.css
+++ b/src/app/[slug]/_components/timeline.module.css
@@ -20,6 +20,8 @@
     }
 
     & > .box {
+      @apply block no-underline;
+
       & > .kind {
         @apply font-bold text-secondary-foreground mb-2 block text-[1.1em];
       }
