--- a/src/shared/components/userland/projects/project-card.module.css
+++ b/src/shared/components/userland/projects/project-card.module.css
@@ -1,40 +1,16 @@
 @reference "../../../globals.css";
 
 .card {
-  @apply relative h-full border border-border/50 bg-card dark:bg-card/80 transition-all duration-200;
+  @apply border border-border/50 bg-card dark:bg-card/80 transition-all duration-200 py-4;
 
   & > .content {
-    @apply flex h-full flex-col px-6;
+    @apply flex flex-col px-6;
 
     & > .header {
-      @apply flex flex-col;
+      @apply flex flex-col lg:flex-row justify-between items-center gap-4 mb-4 no-underline;
 
       & > .title {
-        @apply text-xl font-semibold tracking-tight text-foreground/90;
-      }
-    }
-
-    & > .attributes {
-      @apply flex flex-col gap-2 text-sm;
-
-      & > .row {
-        @apply flex items-center gap-2;
-
-        & > div:first-child {
-          @apply flex-1/4;
-        }
-
-        & > div:last-child {
-          @apply flex-3/4 text-muted-foreground;
-        }
-      }
-    }
-
-    & > .footer {
-      @apply mt-8 flex items-center justify-between pt-4 border-t border-border/50;
-
-      & > .date {
-        @apply text-xs text-muted-foreground/80;
+        @apply text-3xl font-semibold text-foreground/90 mb-0;
       }
 
       & > .stats {
@@ -48,6 +24,50 @@
           }
         }
       }
+    }
+
+    & > .description {
+      @apply text-sm text-muted-foreground;
+    }
+
+    & > .attributes {
+      @apply my-8 grid grid-cols-1 xl:grid-cols-3 gap-8 border-y border-border/50 py-8;
+
+      & > .section {
+        @apply flex flex-col;
+
+        & > .heading {
+          @apply text-sm font-medium text-muted-foreground text-center uppercase;
+        }
+
+        & > .text {
+          @apply font-serif text-4xl text-muted-foreground text-center;
+        }
+
+        & > .information {
+          @apply mt-4 flex flex-row gap-2 items-center justify-center;
+
+          & > div {
+            @apply flex flex-row gap-2 items-center;
+
+            & .icon {
+              @apply h-8 w-8 opacity-70;
+            }
+
+            & .key {
+              @apply text-xs font-medium text-muted-foreground;
+            }
+
+            & .value {
+              @apply text-sm text-muted-foreground;
+            }
+          }
+        }
+      }
+    }
+
+    & > .footer {
+      @apply mt-4 flex justify-center lg:justify-end gap-2;
     }
   }
 }
